--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dgram": "^1.0.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "vban": "^1.5.6"
   }
